# cpp-classroom-1920

./: .gitignore  README.md
semester_01/cls_01/: CMakeLists.txt  README.adoc
semester_01/cls_01/src/task_1/: test.cpp
semester_01/cls_01/src/task_2/: test.cpp
semester_01/cls_01/src/task_3/: test.cpp
semester_01/cls_02/: README.adoc
semester_01/cls_03/: CMakeLists.txt  README.adoc
semester_01/cls_03/src/task_1/: test.cpp
semester_01/cls_03/src/task_2/: ladder_combinations.hpp  test.cpp
semester_01/cls_03/src/task_3/: concat.hpp  test.cpp
semester_01/cls_03/src/task_4/: matrices.hpp  test.cpp
semester_01/cls_04/: CMakeLists.txt  README.adoc
semester_01/cls_04/seminar4/1_include_cpp/: main.cpp  say_hello.cpp  speaker.cpp  speaker.hpp
semester_01/cls_04/seminar4/2_how_new_works/: main.cpp
semester_01/cls_04/seminar4/3_fight_to_memory_leaks/: main.cpp
semester_01/cls_04/seminar4/4_use_after_free/: main.cpp
semester_01/cls_04/seminar4/5_out_of_range_access/: main.cpp  static_array.cpp
semester_01/cls_04/seminar4/6_constants/: main.cpp  problem.cpp
semester_01/cls_04/src/task_1/: test.cpp
semester_01/cls_04/src/task_2/: helper_bot.hpp  test.cpp
semester_01/cls_04/src/task_3/: test.cpp
semester_01/cls_05/: CMakeLists.txt  README.adoc
semester_01/cls_05/src/task_1/: for_each.hpp  test.cpp
semester_01/cls_05/src/task_2/: read_write.hpp  test.cpp
semester_01/cls_05/src/task_3/: test.cpp
semester_01/cls_06/: CMakeLists.txt  README.adoc
semester_01/cls_06/src/task_1/: test.cpp
semester_01/cls_06/src/task_2/: test.cpp
semester_01/cls_07/: CMakeLists.txt  README.adoc
semester_01/cls_07/src/task_1/: test.cpp
semester_01/cls_07/src/task_2/: test.cpp
semester_01/cls_08/: CMakeLists.txt  README.adoc
semester_01/cls_08/src/task_1/: test.cpp
semester_01/cls_08/src/task_2/: test.cpp
semester_01/cls_08/src/task_3/: test.cpp
semester_01/cls_09/: CMakeLists.txt  README.adoc
semester_01/cls_09/src/task_1/: test.cpp
semester_01/cls_09/src/task_2/: test.cpp
semester_01/cls_09/src/task_3/: test.cpp
semester_01/cls_10/: CMakeLists.txt  README.adoc
semester_01/cls_10/src/task_1/: test.cpp
semester_01/cls_10/src/task_2/: test.cpp
semester_01/cls_10/src/task_3/: test.cpp
semester_01/cls_11/: CMakeLists.txt  README.adoc
semester_01/cls_11/src/task_2/: c_style_api.hpp  cpp_wrappers.hpp  test.cpp
semester_01/control_01/: CMakeLists.txt  README.adoc
semester_01/control_01/src/: network.cpp  network.hpp  test.cpp
semester_01/control_02/: CMakeLists.txt  README.adoc
semester_01/control_02/src/: test.cpp
semester_01/control_03/: CMakeLists.txt  README.adoc
semester_01/control_03/src/: linq.hpp  test.cpp
semester_02/cls_01/: README.adoc
semester_02/cls_02/: CMakeLists.txt  README.adoc
semester_02/cls_02/src/task_1/: test.cpp  unique_ptr.hpp
semester_02/cls_03/: CMakeLists.txt  README.adoc
semester_02/cls_03/src/task_1/: range.hpp  test.cpp
semester_02/cls_03/src/task_2/: schedule.hpp  test.cpp
semester_02/control_01/: CMakeLists.txt  README.adoc
semester_02/control_01/src/: my_vector.h  test.cpp
