# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project(classwork-01)

# Uncomment to work on task 1
# add_executable(task-1-test src/task_1/test.cpp src/task_1/hello.cpp)

# Uncomment to work on task 2
# add_executable(task-2-test src/task_2/test.cpp src/task_2/fizzbuzz.cpp)

# Uncomment to work on task 3
# add_executable(task-3-test src/task_3/test.cpp src/task_3/compute_fib.cpp)